--- a/package.json
+++ b/package.json
@@ -1,8 +1,4 @@
 {
-"scripts": {
-  "test": "make test",
-  "start": "node index.js"
-},
   "name": "la-grande-helene",
   "private": true,
   "dependencies": {
@@ -10,5 +6,8 @@
     "db-migrate-pg": "^1.2.2",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "^3.9.0"
   }
 }
