--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
-{
+{ "scripts": {
+   "start": "node index.js"
+},
+
   "name": "la-grande-helene",
   "private": true,
   "dependencies": {
@@ -10,8 +13,5 @@
   },
   "devDependencies": {
     "webpack-dev-server": "^3.11.0"
-  },
-  "scripts": {
-      "start": "echo \"No node file to run\" && exit 0"
   }
 }
