--- a/package.json
+++ b/package.json
@@ -1,7 +1,4 @@
-{ "scripts": {
-   "start": "node index.js"
-},
-
+{
   "name": "la-grande-helene",
   "private": true,
   "dependencies": {
@@ -13,5 +10,8 @@
   },
   "devDependencies": {
     "webpack-dev-server": "^3.11.0"
+  },
+"scripts": {
+      "start": "echo \"No node file to run\" && exit 0"
   }
 }
